# label-transfer

./: ..gitignore.un~  .gitignore  README.md  frisb_post_proc.cpp  result
darknet/: .Makefile.un~  ._yolov3.weights  .detect.sh.un~  Makefile  Makefile~  bad.list  detect.sh  detect.sh~  input  runyolo.sh
fribs_output/: 0000000002  0000000004  0000000005  0000000009  0000000010  0000000014  0000000016  0000000017  0000000019  0000000024  0000000025  0000000026  0000000027  0000000028  0000000029  0000000031  0000000032  0000000033  0000000034  0000000035  0000000038  0000000039  0000000042  0000000044  0000000047  0000000048  0000000050  0000000052  0000000053  0000000054  0000000056  0000000057  0000000058  0000000060  0000000064  0000000066  0000000067  0000000068  0000000070  0000000071  (+14 more)
frisb_output/: 0000000000  0000000001  0000000003  (+51 more)
labeltrans/: .CMakeLists.txt.un~  .main.cpp.un~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  get_3d_bbox.cpp  get_3d_bbox.h  main  main.cpp  main.cpp~  projection.cpp  projection.cpp~  projection.h  projection.h~  test  test.cpp
labeltrans/rangeimg/: .CMakeLists.txt.un~  .GetRangeimgFromCloud.cpp.un~  .GetRangeimgFromCloud.h.un~  .main.cpp.swp  .main.cpp.un~  .readkitti.cpp.un~  .readkitti.h.un~  .utils.cpp.un~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  GetRangeimgFromCloud.cpp  GetRangeimgFromCloud.cpp~  GetRangeimgFromCloud.h  GetRangeimgFromCloud.h~  Makefile  README.md  cmake_install.cmake  main.cpp  main.cpp~  readkitti.cpp  readkitti.cpp~  readkitti.h  readkitti.h~  test  utils.cpp
(+224 files in other folders)
