cmake_minimum_required (VERSION 2.6)
project (labeltrans)
include_directories("${PROJECT_BINARY_DIR}")
add_library(proj projection.cpp)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(main main.cpp)
target_link_libraries(main proj)
target_link_libraries(main ${OpenCV_LIBS})
set(CMAKE_BUILD_TYPE Debug)
